# blog_app

./: .env  Cargo.toml  diesel.toml
migrations/2025-01-14-101103_post/: up.sql
migrations/2025-01-14-101122_users/: up.sql
src/: main.rs
src/controllers/: auth.rs  mod.rs  users.rs
src/db_operations/: db.rs  mod.rs  user_db_operations.rs
src/models/: app_state.rs  mod.rs  ui.rs
tempplates/: login.html  register.html
