[package]
name = "admin_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel ={version  ="2.2.1", features =["postgres", "chrono"]}
dotenvy="0.15"
chrono ={version ="0.4.38", features=["serde"]}
actix-web="4.8.0"
actix-identity ="0.7.1"
actix-session={version ="0.9.0", features =["cookie-session"]}
serde ={version="1.0.204", features =["derive"]}
serde_json = "1.0.0"
askama="0.12.1"
bcrypt="0.15.1"